# fluidProject

./: CMakeLists.txt  README.md  fluid_kernels.cu  fluid_kernels.cuh  fluid_simulator.cpp  fluid_simulator.h  main.cpp  palette.h
